sonar recommended updates